refactor: update order retrieval to support pagination and return Page<OrderSummaryDTO>